@@ -42,7 +42,7 @@ AM_CPPFLAGS = \
 
 dlvexTS_CXXFLAGS = $(CPPUNIT_CFLAGS)
 
-dlvhexTS_LDFLAGS = $(CPPUNIT_LIBS) $(DLVHEX_LIBS)
+dlvhexTS_LDFLAGS = $(CPPUNIT_LIBS) $(DLVHEX_LIBS) @LIBCURL@ 
 
 dlvhexTS_LDADD = \
     @LIBLTDL@ @LIBADD_DL@ \
