@@ -1,3 +1,9 @@
+2009-04-06  Peter Schueller      <ps@kr.tuwien.ac.at>
+
+	* src/testsuite/dlvhex/Makefile.am: Linking in libcurl for testing.
+	* src/dlvhex/Makefile.am: Linking tested modules into libdlvhexbase instead
+	of the dlvhex binary.
+
 2009-03-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* src/dlvhex/GraphBuilder.cpp: Mark fresh auxiliary head AtomNodes as auxiliary.
